turtleart.flower.Flower.scala.error
Erreur de compilation :
Flower:2: error: not enough arguments for method poly: (nbCotes: Int, taille: Int)Unit.
Unspecified value parameter taille.
  poly(8)
      ^Flower:10: error: not found: value tourne
    tourne(360/nbCotes)
    ^