turtleart.flower.Flower.scala.code
override def run() {
  poly(8)
}

def poly(nbCotes:Int, taille:Int)
{
  for(i<-0 to nbCotes)
  {
    avance(taille)
    tourne(360/nbCotes)
  }
}